--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,44 @@ nav {
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 1rem;
 }
+.cart-quantity{
 
+}
+.cart{
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  cursor: pointer;
+  z-index: 5;
+  padding: 1rem;
+}
+@media(min-width: 767px) {
+  .cart{
+    top: 5rem;
+    bottom: unset;
+  }
+}
+.header-logo{
+  white-space: nowrap;
+}
+.basket-list{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 50rem;
+  max-width: 95%;
+}
+.basket-close{
+  cursor: pointer;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  color: #fff;
+}
+.basket-delete{
+  cursor: pointer;
+}
 
 
