fixed a basket's inner layout

--- a/src/index.css
+++ b/src/index.css
@@ -94,3 +94,10 @@ nav {
     transform: translateY(0);
   }
 }
+.basket-item{
+  display: flex;
+  align-items: center;
+}
+.item__inner{
+  flex-grow: 1;
+}
